spec/data/mockDefs/invalid/authMethodNotFound/mockDefAuthMethodNotFound.js
module.exports = function () {
  return {
    respondTo: 'GET',
    authMethod: 'Foo',
    endpoint: '/api/hello/:name',
    handledBy: () => {},
  };
};
